Provide media queries to both alter the layout of the footer content on smaller viewports, and resolve height issues for both 'contact' and 'about' HTML files for larger viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,16 +633,9 @@ aside p {
     #about-us{
         height: 100%;
     }
-}
 
-@media only screen and (min-width: 1024px) {
-    .text {
-        font-size: 35px;
-        line-height: 4rem;
-    }
-
-    .about h1 {
-        margin-top: 4rem;
+    #about-us {
+        height: 84vh;
     }
 }
 
@@ -658,6 +651,13 @@ aside p {
     }
 }
 
+@media only screen and (max-width: 1024px) {
+    #contact {
+        height: 89vh;
+    }
+}
+
+
 @media only screen and (max-width: 414px) {
     .info-card {
         align-items: center;
@@ -672,6 +672,24 @@ aside p {
     .content {
         margin-top: 0;
         font-size: 14px;
+    }
+
+    #contact {
+        height: 100%;
+    }
+
+    .company-info {
+        text-align: center;
+        float: none;
+    }
+
+    .personal-info {
+        text-align: center;
+        float: none;
+    }
+
+    .form-group {
+        margin-top: 1rem;
     }
 }
 
@@ -703,7 +721,7 @@ aside p {
     }
 
     #about-us {
-        height: 100vh;
+        height: 84vh;
     }
 }
 
@@ -721,6 +739,19 @@ aside p {
     aside p {
         font-size: 25px;
     }
+
+    #about-us {
+        height: 100%;
+    }
+
+    .about h1 {
+        margin-top: 1rem;
+    }
+
+    .text {
+        font-size: 35px;
+        line-height: 4rem;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -733,5 +764,21 @@ aside p {
         width: 100%;
         margin-bottom: 20px;
         
+    }
+}
+
+@media only screen and (max-width: 540px) and (min-width: 500px) {
+    .form-group {
+        margin-top: 1rem;
+    }
+
+    .company-info {
+        text-align: center;
+        float: none;
+    }
+
+    .personal-info {
+        text-align: center;
+        float: none;
     }
 }
